--- a/individual-work/css-flex-1/index.html
+++ b/individual-work/css-flex-1/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Individual-work</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    <div class=".flex-container">
-        <div class=".flex-items:nth-child(1)"></div>
-        <div class=".flex-items:nth-child(2)"></div>
-        <div class=".flex-items:nth-child(3)"></div>
+    <div class="page-container">
+        <div class="flex-container">
+            <div class="flex-items">item1</div>
+            <div class="flex-items">item2</div>
+            <div class="flex-items">item3</div>
+        </div>
     </div>
 </body>
+
 </html>
