--- a/individual-work/iw-css-flex-2/index.html
+++ b/individual-work/iw-css-flex-2/index.html
@@ -11,23 +11,33 @@
 </head>
 
 <body class="bg">
-    <header>
-        <div class="flex-container">
-            <div class="flex-items">
-                <img src="logo.png" alt="logo" width="220px" height="221">
+    <header class="top-bar">
+        <div class="flex-top-bar">
+            <!-- logo -->
+            <div class="flex-logo"> 
+                <img src="logo.png" alt="logo" width="220px">
             </div>
-            <div class="flex-items">
-                <div class="flex-container2">
-                    <div class="flex-items2"></div>
-                    <div class="flex-items2"></div>
-                    <div class="flex-items2"></div>
+            <!-- položky mezi -->
+            <div class="flex-nav"> 
+                <div class="navigation-container">
+                    <div class="navigation">
+                        <p>Domů</p>
+                    </div>
+                    <div class="navigation">
+                        <p>O nás</p>
+                    </div>
+                    <div class="navigation">
+                        <p>Kontakty</p>
+                    </div>
                 </div>
             </div>
-            <div class="flex-items">
+            <!-- hledátko -->
+            <div class="flex-search"> 
                 <img src="search.png" alt="search" width="15px" height="15px">
             </div>
         </div>
-    </header class="flex-middle">
+    </header>
+    <!-- boxík -->
     <section class="flex-items-middle">
         <div>
             <h1>Lorem ipsum</h1>
@@ -51,3 +61,5 @@
 </body>
 
 </html>
+
+<!-- </header class="flex-middle"> -->
