--- a/individual-work/iw-css-flex-2/index.html
+++ b/individual-work/iw-css-flex-2/index.html
@@ -10,36 +10,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg">
-    <header class="top-bar">
-        <div class="flex-top-bar">
+<body>
+    <section class="section-container">
+        <div class="flex-container">
             <!-- logo -->
-            <div class="flex-logo"> 
+            <div class="flex-items">
                 <img src="logo.png" alt="logo" width="220px">
             </div>
             <!-- položky mezi -->
-            <div class="flex-nav"> 
+            <div class="flex-items">
                 <div class="navigation-container">
-                    <div class="navigation">
-                        <p>Domů</p>
-                    </div>
-                    <div class="navigation">
-                        <p>O nás</p>
-                    </div>
-                    <div class="navigation">
-                        <p>Kontakty</p>
-                    </div>
+                    <div class="navigation-items:nth-child(1)">Domů</div>
+                    <div class="navigation-items:nth-child(2)">O nás</div>
+                    <div class="navigation-items:nth-child(3)">Kontakty</div>
                 </div>
             </div>
             <!-- hledátko -->
-            <div class="flex-search"> 
-                <img src="search.png" alt="search" width="15px" height="15px">
+            <div class="flex-items">
+                <img src="search.png" alt="search button" width="15px" height="15px">
             </div>
         </div>
-    </header>
+    </section>
     <!-- boxík -->
-    <section class="flex-items-middle">
-        <div>
+    <section class="middle-container">
+        <div class="middle-items">
             <h1>Lorem ipsum</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consectetur fringilla nisi, quis semper
@@ -61,5 +55,3 @@
 </body>
 
 </html>
-
-<!-- </header class="flex-middle"> -->
