--- a/individual-work/iw-css-flex-2/index.html
+++ b/individual-work/iw-css-flex-2/index.html
@@ -14,42 +14,59 @@
     <section class="section-container">
         <div class="flex-container">
             <!-- logo -->
-            <div class="flex-items">
-                <img src="logo.png" alt="logo" width="220px">
+            <div class="flex-items-logo">
+                <div class="logo-container">
+                    <div class="logo-items:nth-child(1)">
+                        <img src="logo.png" alt="logo" width="220px">
+                    </div>
+                </div>
             </div>
             <!-- položky mezi -->
-            <div class="flex-items">
+            <div class="flex-items-navigation">
                 <div class="navigation-container">
-                    <div class="navigation-items:nth-child(1)">Domů</div>
-                    <div class="navigation-items:nth-child(2)">O nás</div>
-                    <div class="navigation-items:nth-child(3)">Kontakty</div>
+                    <div class="navigation-items:nth-child(1)">
+                        <p>Domů</p>
+                    </div>
+                    <div class="navigation-items:nth-child(2)">
+                        <p>O nás</p>
+                    </div>
+                    <div class="navigation-items:nth-child(3)">
+                        <p>Kontakty</p>
+                    </div>
                 </div>
             </div>
             <!-- hledátko -->
-            <div class="flex-items">
-                <img src="search.png" alt="search button" width="15px" height="15px">
+            <div class="flex-items-search">
+                <div class="search-container">
+                    <div class="search-items:nth-child(1)">
+                        <img src="search.png" alt="search button" width="15px" height="15px">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!-- boxík -->
     <section class="middle-container">
         <div class="middle-items">
-            <h1>Lorem ipsum</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consectetur fringilla nisi, quis semper
-                tortor
-                sollicitudin vitae. Phasellus et est tempor, vestibulum metus nec, imperdiet nunc. Phasellus nec
-                consequat
-                lectus. Donec quis accumsan mauris. Maecenas in sollicitudin libero, in iaculis sem. In eget justo
-                eleifend,
-                eleifend sapien at, laoreet magna. Ut tortor urna, sollicitudin nec risus quis, dictum luctus purus.
-                Morbi
-                sit amet fringilla arcu. Etiam at sapien facilisis, auctor dolor sit amet, aliquet metus. Vivamus nec
-                ipsum
-                lacinia est dictum mollis. Sed faucibus id urna ac eleifend. Ut turpis dolor, iaculis at eros id,
-                rhoncus
-                tristique lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-            </p>
+            <div class="middle-items:nth-child(1)">
+                <h1>Lorem ipsum</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consectetur fringilla nisi, quis semper
+                    tortor
+                    sollicitudin vitae. Phasellus et est tempor, vestibulum metus nec, imperdiet nunc. Phasellus nec
+                    consequat
+                    lectus. Donec quis accumsan mauris. Maecenas in sollicitudin libero, in iaculis sem. In eget justo
+                    eleifend,
+                    eleifend sapien at, laoreet magna. Ut tortor urna, sollicitudin nec risus quis, dictum luctus purus.
+                    Morbi
+                    sit amet fringilla arcu. Etiam at sapien facilisis, auctor dolor sit amet, aliquet metus. Vivamus
+                    nec
+                    ipsum
+                    lacinia est dictum mollis. Sed faucibus id urna ac eleifend. Ut turpis dolor, iaculis at eros id,
+                    rhoncus
+                    tristique lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                </p>
+            </div>
         </div>
     </section>
 </body>
