--- a/individual-work/iw-css-flex-2/index.html
+++ b/individual-work/iw-css-flex-2/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-    <section class="section-container">
+    <header class="section-container">
         <div class="flex-container">
             <!-- logo -->
             <div class="flex-items-logo">
                 <div class="logo-container">
-                    <div class="logo-items:nth-child(1)">
+                    <div>
                         <img src="logo.png" alt="logo" width="220px">
                     </div>
                 </div>
@@ -24,13 +24,13 @@
             <!-- položky mezi -->
             <div class="flex-items-navigation">
                 <div class="navigation-container">
-                    <div class="navigation-items:nth-child(1)">
+                    <div>
                         <p>Domů</p>
                     </div>
-                    <div class="navigation-items:nth-child(2)">
+                    <div>
                         <p>O nás</p>
                     </div>
-                    <div class="navigation-items:nth-child(3)">
+                    <div>
                         <p>Kontakty</p>
                     </div>
                 </div>
@@ -44,11 +44,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </header>
     <!-- boxík -->
     <section class="middle-container">
-        <div class="middle-items">
-            <div class="middle-items:nth-child(1)">
+        <div class="middle-items">            
                 <h1>Lorem ipsum</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consectetur fringilla nisi, quis semper
@@ -65,8 +64,7 @@
                     lacinia est dictum mollis. Sed faucibus id urna ac eleifend. Ut turpis dolor, iaculis at eros id,
                     rhoncus
                     tristique lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                </p>
-            </div>
+                </p>            
         </div>
     </section>
 </body>
