--- a/individual-work/own-website/index.html
+++ b/individual-work/own-website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,95 @@
     <title>Timer</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,200&family=Quicksand:wght@500&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
-<div>
-    <h1>ahoj</h1>
-</div>
+    <header>
+        <div class="navigation-menu">
+            <div class="menu-items">
+                <div class="middle-items">
+                    <button type="button">home</button>
+                </div>
+            </div>
 
 
-    
+            <div class="menu-items">
+                <div class="middle-items">
+                    <button type="button">clock</button>
+                </div>
+            </div>
+
+
+            <div class="menu-items">
+                <div class="middle-items">
+                    <button type="button">about</button>
+                </div>
+            </div>
+    </header>
+    <section class="section-content">
+        <div class="section-item">
+            <h1>AHOJ</h1>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam erat volutpat. Etiam egestas wisi a
+                erat. Nunc dapibus tortor vel mi dapibus sollicitudin. Nullam dapibus fermentum ipsum. Nulla non arcu
+                lacinia neque faucibus fringilla. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Duis
+                condimentum augue id magna semper rutrum. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                qui officia deserunt mollit anim id est laborum. Integer tempor.</p>
+        </div>
+        <div class="section-item">
+            <h1>AHOJ</h1>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam erat volutpat. Etiam egestas wisi a
+                erat. Nunc dapibus tortor vel mi dapibus sollicitudin. Nullam dapibus fermentum ipsum. Nulla non arcu
+                lacinia neque faucibus fringilla. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Duis
+                condimentum augue id magna semper rutrum. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                qui officia deserunt mollit anim id est laborum. Integer tempor.</p>
+        </div>
+    </section>
+
 </body>
+
 </html>
+<!-- <!-- <div class="middle-items">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="HOME">
+                                    <p>HOME</p>
+                                </i>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="menu-items">
+                        <div class="middle-items">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="CLOCK">
+                                            <p>CLOCK</p>
+                                        </i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+
+                    </div>
+                    <div class="menu-items">
+                        <div class="middle-items">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="ABOUT">
+                                            <p>ABOUT</p>
+                                        </i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div> -->
