--- a/individual-work/own-website/index.html
+++ b/individual-work/own-website/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer</title>
+    <title>home</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,48 +15,44 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body id="bg">
     <header>
         <div class="navigation-menu">
-            <div class="menu-items">
-                <div class="middle-items">
+            <div>
+                <div class="navigation-items">
                     <button type="button">home</button>
                 </div>
             </div>
 
-
-            <div class="menu-items">
-                <div class="middle-items">
+            <div>
+                <div class="navigation-items">
                     <button type="button">clock</button>
                 </div>
             </div>
 
-
-            <div class="menu-items">
-                <div class="middle-items">
+            <div>
+                <div class="navigation-items">
                     <button type="button">about</button>
                 </div>
             </div>
     </header>
     <section class="section-content">
         <div class="section-item">
-            <h1>AHOJ</h1>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam erat volutpat. Etiam egestas wisi a
-                erat. Nunc dapibus tortor vel mi dapibus sollicitudin. Nullam dapibus fermentum ipsum. Nulla non arcu
-                lacinia neque faucibus fringilla. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Duis
-                condimentum augue id magna semper rutrum. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum. Integer tempor.</p>
+            <h1>vítejte, stránka se zatím stále připravuje</h1>
         </div>
+
         <div class="section-item">
-            <h1>AHOJ</h1>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam erat volutpat. Etiam egestas wisi a
-                erat. Nunc dapibus tortor vel mi dapibus sollicitudin. Nullam dapibus fermentum ipsum. Nulla non arcu
-                lacinia neque faucibus fringilla. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Duis
-                condimentum augue id magna semper rutrum. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum. Integer tempor.</p>
+            <h1>hodinářství</h1>
+            <p>později zde najdete vše od hodin, těch fyzických, přes digitální... až po jejich komponenty
+                <br> součástí jsou služby hodin do prostředí digitálního, tak jejich výroba na zakázku do prostředí
+                skutečného
+            </p>
+        </div>
+
+        <div class="section-item">
+            <h2>děkujeme za přízeň a mnoho zdraví do nového roku :)</h2>
         </div>
     </section>
-
 </body>
 
 </html>
