--- a/individual-work/own-website/index-about.html
+++ b/individual-work/own-website/index-about.html
@@ -39,6 +39,7 @@
     </header>
     <section class="section-content">
         <div class="section-item">
+            <h1>a něco o nás</h1>
             <p>
                 It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
