--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -20,7 +20,7 @@
     <!-- <a href="index-about.html">
         <button type="button"></button>
     </a> -->
-    
+
     <header>
         <div class="navigation-menu">
             <div>
@@ -43,22 +43,24 @@
     </header>
     <section class="section-content">
         <div class="section-item">
-            <h1>vítejte, stránka se zatím stále připravuje</h1>
+            <h1>vítejte, naše hodinářství je zde pro vás</h1>
         </div>
 
         <div class="section-item">
             <h1>hodinářství</h1>
-            <p>později zde najdete vše od hodin, těch fyzických, přes digitální... až po jejich komponenty
+            <p>zde najdete vše od hodin, těch fyzických, přes digitální... až po jejich komponenty
                 <br> součástí jsou služby hodin do prostředí digitálního, tak jejich výroba na zakázku do prostředí
                 skutečného
             </p>
         </div>
 
         <div class="section-item">
-            <h2>děkujeme za přízeň a mnoho zdraví do nového roku :)</h2>
+            <h2>děkujeme za návštěvu webu, pro navigaci využijte horní panel</h2>
+        </div>
+        <div>
+            <img src="clock-ex.jpg" alt="clock on wall">
         </div>
     </section>
-
 </body>
 </html>
 <!-- <!-- <div class="middle-items">
