--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -45,7 +45,6 @@
         <div class="section-item">
             <h1>vítejte, naše hodinářství je zde pro vás</h1>
         </div>
-
         <div class="section-item">
             <h1>hodinářství</h1>
             <p>zde najdete vše od hodin, těch fyzických, přes digitální... až po jejich komponenty
@@ -53,15 +52,23 @@
                 skutečného
             </p>
         </div>
-
         <div class="section-item">
             <h2>děkujeme za návštěvu webu, pro navigaci využijte horní panel</h2>
         </div>
-        <div>
-            <img src="clock-ex.jpg" alt="clock on wall">
+        <div class="section-item">
+            <h2>zde příkladem naše práce ▼</h2>
+        </div>
+        <div class="sub-section">
+            <div class="sub-section-item">
+                <img src="clock-ex.jpg" alt="clock on wall">
+            </div>
+            <div class="sub-section-item">
+                <img src="clock-ex-1.jpg" alt="clock on wall">
+            </div>
         </div>
     </section>
 </body>
+
 </html>
 <!-- <!-- <div class="middle-items">
                     <ul>
