--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -58,11 +58,11 @@
         <div class="section-item">
             <h2>zde příkladem naše práce ▼</h2>
         </div>
-        <div class="sub-section">
-            <div class="sub-section-item">
+        <div class="photo-section">
+            <div class="photo-section-item">
                 <img src="clock-ex.jpg" alt="clock on wall">
             </div>
-            <div class="sub-section-item">
+            <div class="photo-section-item">
                 <img src="clock-ex-1.jpg" alt="clock on wall">
             </div>
         </div>
