--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -56,7 +56,7 @@
             <h2>děkujeme za návštěvu webu, pro navigaci využijte horní panel</h2>
         </div>
         <div class="section-item">
-            <h2>zde příkladem naše práce ▼</h2>
+            <h2>pro zvědavce - naše práce ▼</h2>
         </div>
         <div class="photo-section">
             <div class="photo-section-item">
@@ -68,7 +68,7 @@
         </div>
     </section>
 
-    
+
 </body>
 
 </html>
