--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>home.</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,17 +53,17 @@
             </p>
         </div>
         <div class="section-item">
-            <h2>děkujeme za návštěvu webu, pro navigaci využijte horní panel</h2>
+            <h2>děkujeme za návštěvu webu :)</h2>
         </div>
         <div class="section-item">
             <h2>pro zvědavce - naše práce ▼</h2>
         </div>
         <div class="photo-section">
             <div class="photo-section-item">
-                <img src="clock-ex.jpg" alt="clock on wall">
+                <img class="rounding" src="clock-ex.jpg" alt="clock on wall">
             </div>
             <div class="photo-section-item">
-                <img src="clock-ex-1.jpg" alt="clock on wall">
+                <img class="rounding" src="clock-ex-1.jpg" alt="clock on wall">
             </div>
         </div>
     </section>
