--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -16,10 +16,7 @@
     <link rel="icon" type="image/png" href="time.png">
 </head>
 
-<body id="bg">
-    <!-- <a href="index-about.html">
-        <button type="button"></button>
-    </a> -->
+<body>
 
     <header>
         <div class="navigation-menu">
@@ -43,20 +40,21 @@
     </header>
     <section class="section-content">
         <div class="section-item">
-            <h1>vítejte, naše hodinářství je zde pro vás</h1>
+            <span><h1>vítejte, </h1></span>
+        <h1>naše hodinářství je zde pro vás...</h1>
         </div>
         <div class="section-item">
-            <h1>hodinářství</h1>
+            <h2>co čekat?</h2>
             <p>zde najdete vše od hodin, těch fyzických, přes digitální... až po jejich komponenty
                 <br> součástí jsou služby hodin do prostředí digitálního, tak jejich výroba na zakázku do prostředí
                 skutečného
             </p>
         </div>
         <div class="section-item">
-            <h2>děkujeme za návštěvu webu :)</h2>
+            <h2>děkujeme za návštěvu webu<span> :)</span></h2>
         </div>
         <div class="section-item">
-            <h2>pro zvědavce - naše práce ▼</h2>
+            <h2>pro zvědavce - naše práce<span> ▼</span></h2>
         </div>
         <div class="photo-section">
             <div class="photo-section-item">
@@ -67,8 +65,6 @@
             </div>
         </div>
     </section>
-
-
 </body>
 
 </html>
