--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -40,21 +40,20 @@
     </header>
     <section class="section-content">
         <div class="section-item">
-            <span><h1>vítejte, </h1></span>
-        <h1>naše hodinářství je zde pro vás...</h1>
+         <h1><span class="colorize">vítejte</span> v hodinářství pitera</h1>
         </div>
         <div class="section-item">
-            <h2>co čekat?</h2>
+            <h2><span class="colorize">co čekat?</span></h2>
             <p>zde najdete vše od hodin, těch fyzických, přes digitální... až po jejich komponenty
                 <br> součástí jsou služby hodin do prostředí digitálního, tak jejich výroba na zakázku do prostředí
                 skutečného
             </p>
         </div>
         <div class="section-item">
-            <h2>děkujeme za návštěvu webu<span> :)</span></h2>
+            <h2>děkujeme za návštěvu webu <span class="colorize2">:)</span></h2>
         </div>
         <div class="section-item">
-            <h2>pro zvědavce - naše práce<span> ▼</span></h2>
+            <h2>pro zvědavce - naše práce <span class="colorize2">▼</span></h2>
         </div>
         <div class="photo-section">
             <div class="photo-section-item">
