--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -40,13 +40,12 @@
     </header>
     <section class="section-content">
         <div class="section-item">
-         <h1><span class="colorize">vítejte</span> v hodinářství pitera</h1>
+         <h1><span class="colorize">vítejte</span> v listářství davidovy bonsaje a orchydeje</h1>
         </div>
         <div class="section-item">
             <h2><span class="colorize">co čekat?</span></h2>
-            <p>zde najdete vše od hodin, těch fyzických, přes digitální... až po jejich komponenty
-                <br> součástí jsou služby hodin do prostředí digitálního, tak jejich výroba na zakázku do prostředí
-                skutečného
+            <p>zda najdete jak tipy na pěstování, tak doporučení od našich specialistů jak se starat o rostliny
+                <br>součástí jsou služby prodeje, tak non-stop podpora pro pěstování, nabízíme i zahradnické služby 
             </p>
         </div>
         <div class="section-item">
@@ -57,10 +56,10 @@
         </div>
         <div class="photo-section">
             <div class="photo-section-item">
-                <img class="rounding" src="clock-ex.jpg" alt="clock on wall">
+                <img class="rounding" src="bonsai.jpg" alt="clock on wall">
             </div>
             <div class="photo-section-item">
-                <img class="rounding" src="clock-ex-1.jpg" alt="clock on wall">
+                <img class="rounding" src="orchid.jpg" alt="clock on wall">
             </div>
         </div>
     </section>
