--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -88,6 +88,11 @@
                 <img class="image2" src="orchid.jpg" alt="bonsai-2">
                 <img class="image2" src="bonsai-2.jpg" alt="orchid">
             </div>
+            <div class="photo-third">
+                <div>
+                    <img class="image3" src="orchid-1.jpg" alt="orchid-1">
+                </div>
+            </div>
         </div>
 
     </section>
