pre-final updates

--- a/individual-work/own-website/index-home.html
+++ b/individual-work/own-website/index-home.html
@@ -13,7 +13,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,200&family=Quicksand:wght@500&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/png" href="time.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Dosis:wght@300&family=Indie+Flower&display=swap"
+        rel="stylesheet">
     <!-- zdroje použitých fotografií - práva na jejich použití podléhají jejich majiteli a jejich šíření za nekomerčním účelem je v souladu se zákonem o digitálním autorském právu -->
     <!-- https://duckduckgo.com/?q=orchid+in+pot&t=ffab&iar=images&iax=images&ia=images&iai=https%3A%2F%2Fwww.baytree-interiors.co.uk%2F_uploads%2Fimg%2Fproducts%2Fgiant%2Flarge-deep-red-orchid-in-glass-pot_19958.jpg -->
     <!-- https://www.homesdirect365.co.uk/images/large-white-orchid-in-glass-pot-p64467-93848_zoom.jpg -->
@@ -23,7 +27,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="navigation-menu">
             <div>
@@ -31,7 +34,7 @@
                     <button type="button">home</button>
                 </div>
             </div>
-
+            
             <div>
                 <div class="navigation-items">
                     <button type="button">products</button>
@@ -44,6 +47,7 @@
                 </div>
             </div>
     </header>
+    
     <section>
         <div class="section-item">
             <h1><span class="colorize">vítejte</span> v davidově listářství</h1>
@@ -60,25 +64,6 @@
         <div class="section-item">
             <h2>pro zvědavce - naše práce <span class="colorize2">▼</span></h2>
         </div>
-        <!-- <div class="photo-section">
-            <div class="photo-sub-section">
-                <div class="photo-sub-section-item">
-                    <img src="bonsai.jpg" alt="clock on wall">
-                </div>
-                <div class="photo-sub-section-item">
-                    <img src="bonsai-2.jpg" alt="clock on wall">
-                </div>
-            </div>
-            <div class="photo-sub-section-1">
-                <div class="photo-sub-section-1-item">
-                    <img src="bonsai-1.jpg" alt="clock on wall">
-                </div>
-                <div class="photo-sub-section-1-item">
-                    <img src="orchid.jpg" alt="clock on wall">
-                </div>
-            </div>
-        </div> -->
-
         <div class="photo">
             <div class="photo-first">
                 <img class="image1" src="bonsai.jpg" alt="bonsai">
@@ -90,12 +75,13 @@
             </div>
             <div class="photo-third">
                 <div>
-                    <img class="image3" src="orchid-1.jpg" alt="orchid-1">
+                    <img class="image3" src="orchid-2.jpg" alt="orchid-2">
                 </div>
             </div>
         </div>
 
     </section>
+
 </body>
 
 </html>
