--- a/individual-work/pololetni-prace/index-home.html
+++ b/individual-work/pololetni-prace/index-home.html
@@ -54,8 +54,8 @@
                     </a>
                 </div>
             </div>
+        </div>
     </header>
-
     <section>
         <div class="section-item">
             <h1><span class="colorize">vítejte</span> v davidově listářství</h1>
@@ -83,14 +83,13 @@
             </div>
             <div class="photo-third">
                 <div>
-                    <img class="image3" src="orchid-1.jpg" alt="">
-                    <!-- <img class="image3" src="orchid-2.jpg" alt=""> -->
-                </div>
+                    <img class="image3" src="orchid-2.jpg" alt="">
+<!--                     <img class="image3" src="orchid-1.jpg" alt=""> 
+ -->                </div>
             </div>
         </div>
-        <div  id="3"></div>
+        <div id="3"></div>
     </section>
     <script src="skript.js"></script>
 </body>
-
 </html>
