--- a/individual-work/pololetni-prace/index-home.html
+++ b/individual-work/pololetni-prace/index-home.html
@@ -30,6 +30,7 @@
 <body id="1">
     <header>
         <div class="navigation-menu">
+
             <div>
                 <div class="navigation-items">
                     <a href="#1">
@@ -54,6 +55,8 @@
                     </a>
                 </div>
             </div>
+
+
         </div>
     </header>
     <section>
@@ -84,12 +87,12 @@
             <div class="photo-third">
                 <div>
                     <img class="image3" src="orchid-2.jpg" alt="">
-<!--                     <img class="image3" src="orchid-1.jpg" alt=""> 
- -->                </div>
+                </div>
             </div>
         </div>
         <div id="3"></div>
     </section>
     <script src="skript.js"></script>
 </body>
+
 </html>
