--- a/individual-work/pololetni-prace/index-home.html
+++ b/individual-work/pololetni-prace/index-home.html
@@ -15,9 +15,7 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Dosis:wght@300&family=Indie+Flower&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Dosis:wght@300&family=Indie+Flower&display=swap"  rel="stylesheet">
     <!-- zdroje použitých fotografií - práva na jejich použití podléhají jejich majiteli a jejich šíření za nekomerčním účelem je v souladu se zákonem o digitálním autorském právu -->
     <!-- https://duckduckgo.com/?q=orchid+in+pot&t=ffab&iar=images&iax=images&ia=images&iai=https%3A%2F%2Fwww.baytree-interiors.co.uk%2F_uploads%2Fimg%2Fproducts%2Fgiant%2Flarge-deep-red-orchid-in-glass-pot_19958.jpg -->
     <!-- https://www.homesdirect365.co.uk/images/large-white-orchid-in-glass-pot-p64467-93848_zoom.jpg -->
