--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -27,24 +27,27 @@
 
     <header>
         <div class="home-main">
+            <div class="home-sub-main">
 
-            <div class="home-main-item">
-                <a href="">
-                    <button>HOME</button>
-                </a>
+                <div class="home-main-item">
+                    <a href="">
+                        <button>HOME</button>
+                    </a>
+                </div>
+
+                <div class="home-main-item">
+                    <a href="">
+                        <button>GALLERY</button>
+                    </a>
+                </div>
+
+                <div class="home-main-item">
+                    <a href="">
+                        <button>ABOUT</button>
+                    </a>
+                </div>
             </div>
 
-            <div class="home-main-item">
-                <a href="">
-                    <button>GALLERY</button>
-                </a>
-            </div>
-
-            <div class="home-main-item">
-                <a href="">
-                    <button>ABOUT</button>
-                </a>
-            </div>
         </div>
 
         <!-- <ul>
@@ -56,10 +59,7 @@
     </header>
     <section class="section-main">
         <div class="section-sub-main">
-            <!-- <img src="x1.jpg" alt="foto"> -->
-
-            <h1>Vítejte v naší fotogalerii, <br>berte toto prosím jako jakousi databázi všech našich fotografií.</h1>
-
+            <img src="x1.jpg" alt="foto">
 
         </div>
 
