--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -27,45 +27,60 @@
 
     <header>
         <div class="home-main">
+            <div class="home-main-photo">
+                <img src="leaf-icon.png" alt="icon">
+            </div>
             <div class="home-sub-main">
-
                 <div class="home-main-item">
                     <a href="">
-                        <button>HOME</button>
+                        <button>home</button>
+                    </a>
+                </div>
+                <div class="home-main-item">
+                    <a href="">
+                        <button>gallery</button>
                     </a>
                 </div>
 
                 <div class="home-main-item">
                     <a href="">
-                        <button>GALLERY</button>
-                    </a>
-                </div>
-
-                <div class="home-main-item">
-                    <a href="">
-                        <button>ABOUT</button>
+                        <button>about</button>
                     </a>
                 </div>
             </div>
-
         </div>
-
-        <!-- <ul>
-                <li>HOME</li>
-                <li>PHOTOS</li>
-                <li>ABOUT</li>
-                <li>CONTACTS</li>
-            </ul> -->
     </header>
     <section class="section-main">
         <div class="section-sub-main">
-            <img src="x1.jpg" alt="foto">
-
+            <div class="section-sub-item">
+                <img src="x4.png" alt="foto1">
+            </div>
+            <div class="section-sub-item">
+                <img src="x2.JPG" alt="foto2">
+            </div>
+            <div class="section-sub-item">
+                <img src="x3.jpg" alt="foto3">
+            </div>
+            <div class="section-sub-item">
+                <img src="x1.jpg" alt="foto4">
+            </div>
         </div>
-
     </section>
+    <footer>
+        <div class="footer-main">
+            <div class="footer-main-item">
+                <p>Webový design David Pitra 2022</p>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
 
 </html>
+<!-- <ul>
+                <li>HOME</li>
+                <li>PHOTOS</li>
+                <li>ABOUT</li>
+                <li>CONTACTS</li>
+            </ul> -->
