--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -27,22 +27,23 @@
 
     <header>
         <div class="home-main">
+            <!-- 
             <div class="home-main-photo">
                 <img src="leaf-icon.png" alt="icon">
-            </div>
+            </div> -->
             <div class="home-sub-main">
-                <div class="home-main-item">
+                <div>
                     <a href="">
                         <button>home</button>
                     </a>
                 </div>
-                <div class="home-main-item">
+                <div>
                     <a href="">
                         <button>gallery</button>
                     </a>
                 </div>
 
-                <div class="home-main-item">
+                <div>
                     <a href="">
                         <button>about</button>
                     </a>
@@ -50,21 +51,36 @@
             </div>
         </div>
     </header>
-    <section class="section-main">
-        <div class="section-sub-main">
-            <div class="section-sub-item">
-                <img src="x4.png" alt="foto1">
+    <section>
+        <div class="section-main">
+            <div class="box-1">
+                <img src="3.JPG" alt="foto1">
             </div>
-            <div class="section-sub-item">
-                <img src="x2.JPG" alt="foto2">
+            <div class="box-2">
+                <img src="4.JPG" alt="foto2">
             </div>
-            <div class="section-sub-item">
-                <img src="x3.jpg" alt="foto3">
+            <div class="box-3">
+                <img src="8.JPG" alt="foto3">
             </div>
-            <div class="section-sub-item">
-                <img src="x1.jpg" alt="foto4">
+            <div class="box-4">
+                <img src="10.JPG" alt="foto4">
             </div>
-        </div>
+            <div class="box-5">
+                <img src="11.JPG" alt="foto5">
+            </div>
+            <div class="box-6">
+                <img src="14.jpg" alt="foto6">
+            </div>
+            <div class="box-7">
+                <img src="15.jpg" alt="foto7">
+            </div>
+            <div class="box-8">
+                <img src="16.jpg" alt="foto8">
+            </div>
+            <div class="box-9">
+                <img src="17.jpg" alt="foto9">
+            </div>
+        </div>        
     </section>
     <footer>
         <div class="footer-main">
