--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -54,7 +54,7 @@
     <section>
         <div class="section-main">
             <div class="box-1">
-                <img src="3.JPG" alt="foto1">
+                <img src="" alt="foto1">
             </div>
             <div class="box-2">
                 <img src="4.JPG" alt="foto2">
@@ -66,7 +66,7 @@
                 <img src="10.JPG" alt="foto4">
             </div>
             <div class="box-5">
-                <img src="11.JPG" alt="foto5">
+                <img src="17.jpg" alt="foto5">
             </div>
             <div class="box-6">
                 <img src="14.jpg" alt="foto6">
@@ -78,7 +78,7 @@
                 <img src="16.jpg" alt="foto8">
             </div>
             <div class="box-9">
-                <img src="17.jpg" alt="foto9">
+                <img src="11.JPG" alt="foto9">
             </div>
         </div>        
     </section>
