--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -54,31 +54,31 @@
     <section>
         <div class="section-main">
             <div class="box-1">
-                <img src="" alt="foto1">
+                <img src="2.jpg" alt="foto1">
             </div>
             <div class="box-2">
-                <img src="4.JPG" alt="foto2">
+                <img src="3.JPG" alt="foto2">
             </div>
             <div class="box-3">
-                <img src="8.JPG" alt="foto3">
+                <img src="5.JPG" alt="foto3">
             </div>
             <div class="box-4">
-                <img src="10.JPG" alt="foto4">
+                <img src="6.JPG" alt="foto4">
             </div>
             <div class="box-5">
-                <img src="17.jpg" alt="foto5">
+                <img src="7.jpg" alt="foto5">
             </div>
             <div class="box-6">
-                <img src="14.jpg" alt="foto6">
+                <img src="8.JPG" alt="foto6">
             </div>
             <div class="box-7">
-                <img src="15.jpg" alt="foto7">
+                <img src="9.JPG" alt="foto7">
             </div>
             <div class="box-8">
-                <img src="16.jpg" alt="foto8">
+                <img src="10.JPG" alt="foto8">
             </div>
             <div class="box-9">
-                <img src="11.JPG" alt="foto9">
+                <img src=12.jpg" alt="foto9">
             </div>
         </div>        
     </section>
