--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -26,12 +26,13 @@
 <body>
 
     <header>
-        <div class="home-main">
-            <!-- 
-            <div class="home-main-photo">
-                <img src="leaf-icon.png" alt="icon">
-            </div> -->
-            <div class="home-sub-main">
+        <div class="nav-bar-main-photo">
+            <div class="nav-bar-sub-main-photo">
+                <img src="logo-4.png" alt="logo">
+            </div>
+        </div>
+        <div class="nav-bar-main">
+            <div class="nav-bar-sub-main">
                 <div>
                     <a href="">
                         <button>home</button>
@@ -42,7 +43,11 @@
                         <button>gallery</button>
                     </a>
                 </div>
-
+                <div>
+                    <a href="">
+                        <button>stories</button>
+                    </a>
+                </div>
                 <div>
                     <a href="">
                         <button>about</button>
@@ -50,53 +55,53 @@
                 </div>
             </div>
         </div>
+        <div class="line-divider-main">
+            <div class="line-divider"></div>
+        </div>        
     </header>
     <section>
-        <div class="section-main">
-            <div class="box-1">
-                <img src="2.jpg" alt="foto1">
+        <div class="content-main">
+            <div class="content-sub-main">
+                <div class="box-1">
+                    <img src="8.JPG" alt="foto6">
+                </div>
+                <div class="box-2">
+                    <img src="6.JPG" alt="foto4">
+                </div>
+                <div class="box-3">
+                    <img src="5.JPG" alt="foto3">
+                </div>
+                <div class="box-4">
+                    <img src="3.JPG" alt="foto2">
+                </div>
+                <div class="box-5">
+                    <img src="17.jpg" alt="foto9">
+                </div>
+                <div class="box-6">
+                    <img src="10.JPG" alt="foto8">
+                </div>
+                <div class="box-7">
+                    <img src="2.jpg" alt="foto1">
+                </div>
+                <div class="box-8">
+                    <img src="7.jpg" alt="foto5">
+                </div>
+                <div class="box-9">
+                    <img src="9.JPG" alt="foto7">
+                </div>
+                <div class="box-10">
+                    <img src="13.jpg" alt="foto10">
+                </div>
             </div>
-            <div class="box-2">
-                <img src="3.JPG" alt="foto2">
-            </div>
-            <div class="box-3">
-                <img src="5.JPG" alt="foto3">
-            </div>
-            <div class="box-4">
-                <img src="6.JPG" alt="foto4">
-            </div>
-            <div class="box-5">
-                <img src="7.jpg" alt="foto5">
-            </div>
-            <div class="box-6">
-                <img src="8.JPG" alt="foto6">
-            </div>
-            <div class="box-7">
-                <img src="9.JPG" alt="foto7">
-            </div>
-            <div class="box-8">
-                <img src="10.JPG" alt="foto8">
-            </div>
-            <div class="box-9">
-                <img src=12.jpg" alt="foto9">
-            </div>
-        </div>        
+        </div>
     </section>
     <footer>
         <div class="footer-main">
-            <div class="footer-main-item">
-                <p>Webový design David Pitra 2022</p>
+            <div class="footer-sub-main">
+                <p>Web - David Pitra 2022</p>
             </div>
         </div>
     </footer>
-
-
 </body>
 
 </html>
-<!-- <ul>
-                <li>HOME</li>
-                <li>PHOTOS</li>
-                <li>ABOUT</li>
-                <li>CONTACTS</li>
-            </ul> -->
