--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -56,8 +56,10 @@
             </div>
         </div>
         <div class="line-divider-main">
-            <div class="line-divider"></div>
-        </div>        
+            <div class="line-divider">
+                <p>           </p>
+            </div>
+        </div>
     </header>
     <section>
         <div class="content-main">
@@ -69,17 +71,29 @@
                     <img src="6.JPG" alt="foto4">
                 </div>
                 <div class="box-3">
+                    <p><span>Děkujeme za návštěvu,</span>   
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+
+                <div class="box-4">
                     <img src="5.JPG" alt="foto3">
                 </div>
-                <div class="box-4">
+
+                <div class="box-5">
                     <img src="3.JPG" alt="foto2">
                 </div>
+                <!--
                 <div class="box-5">
                     <img src="17.jpg" alt="foto9">
                 </div>
                 <div class="box-6">
                     <img src="10.JPG" alt="foto8">
-                </div>
+                </div> 
                 <div class="box-7">
                     <img src="2.jpg" alt="foto1">
                 </div>
@@ -91,7 +105,7 @@
                 </div>
                 <div class="box-10">
                     <img src="13.jpg" alt="foto10">
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
