--- a/individual-work/second-website/gallery.html
+++ b/individual-work/second-website/gallery.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home.</title>
+    <title>gallery.</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="gallery.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet">
@@ -37,9 +36,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
     <header>
         <div class="nav-bar-main-photo">
             <div class="nav-bar-sub-main-photo">
@@ -86,15 +83,8 @@
                     <img src="6.JPG" alt="foto4">
                 </div>
                 <div class="box-3">
-                    <p><span>Děkujeme za návštěvu,</span>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-
+                    <img src="7.JPG" alt=""> 
+                    </div>
                 <div class="box-4">
                     <img src="5.JPG" alt="foto3">
                 </div>
@@ -102,9 +92,9 @@
                 <div class="box-5">
                     <img src="3.JPG" alt="foto2">
                 </div>
-                <!--
+                
                 <div class="box-5">
-                    <img src="17.jpg" alt="foto9">
+                    <!-- <img src="17.jpg" alt="foto9"> -->
                 </div>
                 <div class="box-6">
                     <img src="10.JPG" alt="foto8">
@@ -112,6 +102,7 @@
                 <div class="box-7">
                     <img src="2.jpg" alt="foto1">
                 </div>
+                
                 <div class="box-8">
                     <img src="7.jpg" alt="foto5">
                 </div>
@@ -120,7 +111,7 @@
                 </div>
                 <div class="box-10">
                     <img src="13.jpg" alt="foto10">
-                </div> -->
+                </div> 
             </div>
         </div>
     </section>
@@ -131,6 +122,7 @@
             </div>
         </div>
     </footer>
-</body>
 
+
+</body>
 </html>
