--- a/individual-work/second-website/gallery.html
+++ b/individual-work/second-website/gallery.html
@@ -56,7 +56,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="stories.html">
                         <button>stories</button>
                     </a>
                 </div>
@@ -88,11 +88,9 @@
                 <div class="box-4">
                     <img src="5.JPG" alt="foto3">
                 </div>
-
                 <div class="box-5">
                     <img src="3.JPG" alt="foto2">
-                </div>
-                
+                </div>                
                 <div class="box-5">
                     <!-- <img src="17.jpg" alt="foto9"> -->
                 </div>
@@ -104,25 +102,24 @@
                 </div>
                 
                 <div class="box-8">
-                    <img src="7.jpg" alt="foto5">
+                    <img src="18.JPG" alt="foto5">
                 </div>
                 <div class="box-9">
                     <img src="9.JPG" alt="foto7">
                 </div>
                 <div class="box-10">
-                    <img src="13.jpg" alt="foto10">
+                    <img src="22.jpg" alt="foto10">
                 </div> 
             </div>
         </div>
-    </section>
+    </section><!-- 
     <footer>
         <div class="footer-main">
             <div class="footer-sub-main">
                 <p>Web - David Pitra 2022</p>
             </div>
         </div>
-    </footer>
-
+    </footer> -->
 
 </body>
 </html>
