--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -59,7 +59,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="stories.html">
                         <button>stories</button>
                     </a>
                 </div>
