--- a/individual-work/second-website/gallery.html
+++ b/individual-work/second-website/gallery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,6 +37,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="nav-bar-main-photo">
@@ -77,42 +79,64 @@
         <div class="content-main">
             <div class="content-sub-main">
                 <div class="box-1">
-                    <img src="8.JPG" alt="foto6">
+                    <a href="18.JPG" target="_blank">
+                        <img src="18.JPG" alt="foto">
+                    </a>
                 </div>
                 <div class="box-2">
-                    <img src="6.JPG" alt="foto4">
+                    <a href="9.JPG" target="_blank">
+                        <img src="9.JPG" alt="foto">
+                    </a>
                 </div>
                 <div class="box-3">
-                    <img src="7.JPG" alt=""> 
-                    </div>
+                    <a href="7.JPG" target="_blank"> 
+                        <img src="7.JPG" alt="foto">
+                    </a>
+                </div>
                 <div class="box-4">
-                    <img src="5.JPG" alt="foto3">
+                    <a href="5.JPG" target="_blank"> 
+                        <img src="5.JPG" alt="foto">
+                    </a>
                 </div>
                 <div class="box-5">
-                    <img src="3.JPG" alt="foto2">
-                </div>                
+                    <a href="3.JPG" target="_blank"> 
+                        <img src="3.JPG" alt="foto">
+                    </a>
+                </div>
                 <div class="box-5">
-                    <!-- <img src="17.jpg" alt="foto9"> -->
+                    <a href="7.JPG" target="_blank"> 
+                        <img src="7.JPG" alt="foto">
+                    </a>
                 </div>
                 <div class="box-6">
-                    <img src="10.JPG" alt="foto8">
-                </div> 
-                <div class="box-7">
-                    <img src="2.jpg" alt="foto1">
+                    <a href="10.JPG" target="_blank"> 
+                        <img src="10.JPG" alt="foto">
+                    </a>
                 </div>
-                
+                <div class="box-7">
+                    <a href="2.JPG" target="_blank"> 
+                        <img src="2.JPG" alt="foto">
+                    </a>
+                </div>
                 <div class="box-8">
-                    <img src="18.JPG" alt="foto5">
+                    <a href="8.JPG" target="_blank"> 
+                        <img src="8.JPG" alt="foto">
+                    </a>
                 </div>
                 <div class="box-9">
-                    <img src="9.JPG" alt="foto7">
+                    <a href="6.JPG" target="_blank"> 
+                        <img src="6.JPG" alt="foto">
+                    </a>
                 </div>
                 <div class="box-10">
-                    <img src="22.jpg" alt="foto10">
-                </div> 
+                    <a href="22.JPG" target="_blank"> 
+                        <img src="22.JPG" alt="foto">
+                    </a>
+                </div>
             </div>
         </div>
-    </section><!-- 
+    </section>
+    <!-- 
     <footer>
         <div class="footer-main">
             <div class="footer-sub-main">
@@ -122,4 +146,5 @@
     </footer> -->
 
 </body>
+
 </html>
