adding sub sites

--- a/individual-work/second-website/gallery.html
+++ b/individual-work/second-website/gallery.html
@@ -63,7 +63,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="about.html">
                         <button>about</button>
                     </a>
                 </div>
@@ -136,14 +136,13 @@
             </div>
         </div>
     </section>
-    <!-- 
     <footer>
         <div class="footer-main">
             <div class="footer-sub-main">
                 <p>Web - David Pitra 2022</p>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
 </body>
 
