--- a/individual-work/second-website/stories-extras.html
+++ b/individual-work/second-website/stories-extras.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home.</title>
+    <title>stories.</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stories.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet">
@@ -39,7 +39,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="nav-bar-main-photo">
             <div class="nav-bar-sub-main-photo">
@@ -64,7 +63,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="about.html">
+                    <a href="">
                         <button>about</button>
                     </a>
                 </div>
@@ -80,47 +79,37 @@
         <div class="content-main">
             <div class="content-sub-main">
                 <div class="box-1">
-                    <img src="8.JPG" alt="foto6">
+                    <div class="box-1-main">
+                        <div class="box-1-inner">
+                            <div class="box-1-front">
+                                <img src="3.JPG" alt="foto1">
+                            </div>
+                            <div class="box-1-back">
+                                <p>tellus odio, dapibus id fermentum quis, suscipit id erat. Nunc auctor. Integer
+                                    tempor. Pellentesque ipsum.tellus odio, dapibus id fermentum quis, suscipit id erat. Nunc auctor. Integer
+                                    tempor. Pellentesque ipsum.tellus odio, dapibus id fermentum quis, suscipit id erat. Nunc auctor. Integer
+                                    tempor. Pellentesque ipsum.tellus odio, dapibus id fermentum quis, suscipit id erat. Nunc auctor. Integer
+                                    tempor. Pellentesque ipsum.tellus odio, dapibus id fermentum quis, suscipit id erat. Nunc auctor. Integer
+                                    tempor. Pellentesque ipsum.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="box-2">
-                    <img src="6.JPG" alt="foto4">
+                    <div class="box-2-main">
+                        <div class="box-2-inner">
+                            <div class="box-2-front">
+                                <img src="13.jpg" alt="foto2">
+                            </div>
+                            <div class="box-2-back">
+                                <p>
+                                    tellus odio, dapibus id fermentum quis, suscipit id erat. Nunc auctor. Integer
+                                    tempor. Pellentesque ipsum.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="box-3">
-                    <p><span>Děkujeme za návštěvu,</span>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-
-                <div class="box-4">
-                    <img src="5.JPG" alt="foto3">
-                </div>
-
-                <div class="box-5">
-                    <img src="3.JPG" alt="foto2">
-                </div>
-                <!--
-                <div class="box-5">
-                    <img src="17.jpg" alt="foto9">
-                </div>
-                <div class="box-6">
-                    <img src="10.JPG" alt="foto8">
-                </div> 
-                <div class="box-7">
-                    <img src="2.jpg" alt="foto1">
-                </div>
-                <div class="box-8">
-                    <img src="7.jpg" alt="foto5">
-                </div>
-                <div class="box-9">
-                    <img src="9.JPG" alt="foto7">
-                </div>
-                <div class="box-10">
-                    <img src="13.jpg" alt="foto10">
-                </div> -->
             </div>
         </div>
     </section>
@@ -130,7 +119,7 @@
                 <p>Web - David Pitra 2022</p>
             </div>
         </div>
-    </footer>
+    </footer> 
 </body>
 
 </html>
