--- a/individual-work/second-website/stories.html
+++ b/individual-work/second-website/stories.html
@@ -63,7 +63,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <<a href="about.html">
                         <button>about</button>
                     </a>
                 </div>
@@ -79,45 +79,37 @@
         <div class="content-main">
             <div class="content-sub-main">
                 <div class="box-1">
-                    <img src="3.JPG" alt="foto1">
+                    <img src="3.JPG" alt="foto">
                 </div>
                 <div class="box-2">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur ligula sapien, pulvinar a
-                        vestibulum quis, facilisis vel sapien. Nullam sapien sem, ornare ac, nonummy non, lobortis a
-                        enim. Vestibulum fermentum tortor id mi. Donec ipsum massa, ullamcorper in, auctor et,
-                        scelerisque sed, est. Nam sed tellus id magna elementum tincidunt. Fusce tellus odio, dapibus id
-                        fermentum quis, suscipit id erat. Nunc auctor. Integer tempor. Pellentesque ipsum. Fusce
-                        consectetuer risus a nunc. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam
-                        ultricies odio, vitae placerat pede sem sit amet enim. Cras elementum.
+                        is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has survived not only five centuries, but
+                        also the lea
                     </p>
                 </div>
                 <div class="box-3">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur ligula sapien, pulvinar a
-                        vestibulum quis, facilisis vel sapien. Nullam sapien sem, ornare ac, nonummy non, lobortis a
-                        enim. Vestibulum fermentum tortor id mi. Donec ipsum massa, ullamcorper in, auctor et,
-                        scelerisque sed, est. Nam sed tellus id magna elementum tincidunt. Fusce tellus odio, dapibus id
-                        fermentum quis, suscipit id erat. Nunc auctor. Integer tempor. Pellentesque ipsum. Fusce
-                        consectetuer risus a nunc. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam
-                        ultricies odio, vitae placerat pede sem sit amet enim. Cras elementum.
+                        is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has survived not only five centuries, but
+                        also the lea
                     </p>
                 </div>
                 <div class="box-4">
-                    <img src="9.JPG" alt="foto2">
+                    <img src="9.JPG" alt="foto">
                 </div>
             </div>
-           
+        </div>
     </section>
-    <!-- 
     <footer>
         <div class="footer-main">
             <div class="footer-sub-main">
                 <p>Web - David Pitra 2022</p>
             </div>
         </div>
-    </footer> -->
-
+    </footer>
 </body>
 
 </html>
